--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,101 @@
   color: #ffffff;
   font-size: 17px;
   font-weight: 700;
-  line-height: 52px;
   text-align: center;
   display: inline-block;
   background-color: #cd3737;
   font-family: 'Lato', sans-serif; }
   .btn.btn-large {
     width: 260px;
-    height: 57px; }
+    height: 57px;
+    line-height: 57px; }
+  .btn.btn-small {
+    width: 123px;
+    height: 38px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 38px; }
+
+.head h1 {
+  color: #2a2a2a;
+  font-size: 50px;
+  font-weight: 300;
+  line-height: 26px;
+  text-align: center;
+  font-family: 'Lato', sans-serif; }
+  .head h1 span {
+    font-weight: 700; }
+.head .lines {
+  width: 215px;
+  height: 12px;
+  margin: 27px auto 0;
+  position: relative; }
+  .head .lines .line {
+    background-color: #2a2a2a;
+    width: 151px;
+    height: 1px;
+    position: absolute; }
+    .head .lines .line.first {
+      left: 0;
+      top: 0; }
+    .head .lines .line.second {
+      right: 0;
+      bottom: 0; }
+
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+  transition: background .4s ease-out;
+  -ms-transition: background .4s ease-out;
+  -moz-transition: background .4s ease-out;
+  -webkit-transition: background .4s ease-out; }
+  header.white {
+    background-color: white;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22); }
+    header.white .header_content_wrapper a {
+      color: #2e2e2e; }
+  header .header_content_wrapper {
+    width: 1139px;
+    margin: 25px auto; }
+    header .header_content_wrapper a {
+      text-decoration: none;
+      color: white; }
+    header .header_content_wrapper .logo {
+      font-family: 'Lato', sans-serif;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 24px; }
+    header .header_content_wrapper .nav {
+      display: inline-block;
+      float: right; }
+      header .header_content_wrapper .nav li {
+        font-family: 'Lato', sans-serif;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 24px;
+        margin-right: 35px;
+        position: relative;
+        padding-bottom: 8px; }
+        header .header_content_wrapper .nav li:after {
+          bottom: 0;
+          content: "";
+          display: block;
+          height: 3px;
+          left: 50%;
+          position: absolute;
+          background: #cd3737;
+          transition: width 0.3s ease 0s, left 0.3s ease 0s;
+          width: 0;
+          background: linear-gradient(to left, #cd3737 50%, #484848 50%); }
+        header .header_content_wrapper .nav li:hover:after {
+          width: 100%;
+          left: 0; }
 
 .full_page .welcome_section {
-  background: url("../images/main_bg.jpg") center top;
+  background: url("../images/main_bg.jpg") center bottom;
   background-size: cover;
   position: relative;
   width: 100%;
@@ -44,30 +128,305 @@
     height: 50px; }
 .full_page .why_us_section {
   padding: 100px 0px; }
-  .full_page .why_us_section .head h1 {
-    color: #2a2a2a;
-    font-size: 50px;
-    font-weight: 300;
-    line-height: 26px;
+  .full_page .why_us_section .service_container {
+    width: 1139px;
     text-align: center;
-    font-family: 'Lato', sans-serif; }
-    .full_page .why_us_section .head h1 span {
-      font-weight: 700; }
-  .full_page .why_us_section .head .lines {
-    width: 215px;
-    height: 12px;
-    margin: 27px auto 0;
-    position: relative; }
-    .full_page .why_us_section .head .lines .line {
+    margin: 75px auto; }
+    .full_page .why_us_section .service_container .service {
+      display: inline-block;
+      width: 350px; }
+      .full_page .why_us_section .service_container .service h1 {
+        font-family: 'Lato', sans-serif;
+        color: #2a2a2a;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 65px; }
+      .full_page .why_us_section .service_container .service p {
+        font-family: 'Lato', sans-serif;
+        color: rgba(42, 42, 42, 0.85098);
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 22px; }
+      .full_page .why_us_section .service_container .service .image {
+        width: 162px;
+        height: 163px;
+        margin: 0 auto 10px; }
+      .full_page .why_us_section .service_container .service.first .image {
+        background: url("../images/strategy.png"); }
+      .full_page .why_us_section .service_container .service.second {
+        margin: 0 38px; }
+        .full_page .why_us_section .service_container .service.second .image {
+          background: url("../images/motion.png"); }
+      .full_page .why_us_section .service_container .service.third .image {
+        background: url("../images/success.png"); }
+.full_page .studies_section {
+  height: 557px;
+  width: 100%;
+  background: url("../images/studies.jpg") center bottom;
+  background-size: cover;
+  position: relative;
+  padding: 80px 0; }
+  .full_page .studies_section .container {
+    width: 1139px;
+    margin: 60px auto 0; }
+    .full_page .studies_section .container .item {
+      display: inline-block;
+      width: 260px;
+      text-align: center;
+      margin-right: 29px; }
+      .full_page .studies_section .container .item:last-of-type {
+        margin-right: 0; }
+      .full_page .studies_section .container .item h1 {
+        color: #2a2a2a;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 26px;
+        font-family: 'Lato', sans-serif;
+        padding-bottom: 25px; }
+      .full_page .studies_section .container .item p {
+        color: rgba(42, 42, 42, 0.65098);
+        font-size: 15px;
+        font-style: italic;
+        line-height: 22px;
+        font-family: 'Lato', sans-serif;
+        padding-bottom: 30px; }
+      .full_page .studies_section .container .item .item_lines {
+        height: 43px;
+        width: 73px;
+        margin: 0 auto 31px;
+        position: relative; }
+        .full_page .studies_section .container .item .item_lines .vertical {
+          position: absolute;
+          top: 0;
+          width: 1px;
+          height: 31px;
+          background-color: rgba(42, 42, 42, 0.7);
+          margin-left: 36px; }
+        .full_page .studies_section .container .item .item_lines .horizontal_1 {
+          width: 45px;
+          height: 1px;
+          background-color: rgba(42, 42, 42, 0.7);
+          position: absolute;
+          top: 31px;
+          top: 31px;
+          margin-left: 14px; }
+        .full_page .studies_section .container .item .item_lines .horizontal_2 {
+          background-color: rgba(42, 42, 42, 0.7);
+          width: 73px;
+          height: 1px;
+          position: absolute;
+          bottom: 0; }
+      .full_page .studies_section .container .item .image {
+        width: 155px;
+        height: 155px;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 4px solid black;
+        text-align: center;
+        line-height: 155px;
+        margin: 0 auto 38px; }
+        .full_page .studies_section .container .item .image img {
+          width: 126px;
+          height: 126px;
+          border-radius: 50%;
+          vertical-align: middle; }
+.full_page .portfolio_section {
+  padding: 100px 0px; }
+  .full_page .portfolio_section .portfolio {
+    margin-top: 130px; }
+    .full_page .portfolio_section .portfolio .portfolio_menu {
+      width: 1139px;
+      margin: 0 auto 50px; }
+      .full_page .portfolio_section .portfolio .portfolio_menu:after {
+        content: "";
+        display: table;
+        clear: both; }
+      .full_page .portfolio_section .portfolio .portfolio_menu .border {
+        width: 100%;
+        height: 1px;
+        position: relative;
+        background-color: #2a2a2a; }
+        .full_page .portfolio_section .portfolio .portfolio_menu .border:before {
+          content: '';
+          position: absolute;
+          background-color: #2a2a2a;
+          width: 1px;
+          height: 24px;
+          left: 0; }
+        .full_page .portfolio_section .portfolio .portfolio_menu .border:after {
+          content: '';
+          position: absolute;
+          background-color: #2a2a2a;
+          width: 1px;
+          height: 24px;
+          right: 0; }
+      .full_page .portfolio_section .portfolio .portfolio_menu h1 {
+        font-family: 'Lato', sans-serif;
+        color: #cd3737;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 26px;
+        float: left;
+        margin: 14px 0px 0px 20px; }
+      .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager {
+        float: right;
+        margin: 15px 20px 0px 0px; }
+        .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager li {
+          display: inline-block;
+          position: relative;
+          padding: 0 15px; }
+          .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager li:last-of-type {
+            padding-right: 0; }
+            .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager li:last-of-type:after {
+              display: none; }
+          .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager li:after {
+            content: '';
+            height: 70%;
+            width: 2px;
+            background-color: #2a2a2a;
+            position: absolute;
+            top: 5px;
+            right: 0; }
+          .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager li a {
+            font-family: 'Lato', sans-serif;
+            text-decoration: none;
+            color: #2a2a2a;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 26px; }
+            .full_page .portfolio_section .portfolio .portfolio_menu .slider_pager li a.active {
+              color: #cd3737; }
+    .full_page .portfolio_section .portfolio .portfolio_slider .slider_item {
+      width: 100%; }
+      .full_page .portfolio_section .portfolio .portfolio_slider .slider_item .photo {
+        display: inline-block;
+        width: 33.33333%;
+        height: 571px;
+        overflow: hidden; }
+        .full_page .portfolio_section .portfolio .portfolio_slider .slider_item .photo .small {
+          width: 100%;
+          height: 292px;
+          overflow: hidden; }
+        .full_page .portfolio_section .portfolio .portfolio_slider .slider_item .photo img {
+          width: 100%;
+          height: auto; }
+  .full_page .portfolio_section .view_more {
+    margin: 80px auto;
+    text-align: center; }
+    .full_page .portfolio_section .view_more .box {
+      position: relative;
+      width: 554px;
+      margin: 0 auto;
+      height: 40px; }
+      .full_page .portfolio_section .view_more .box .top {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        background-color: #2a2a2a;
+        height: 1px; }
+      .full_page .portfolio_section .view_more .box .left {
+        background-color: #2a2a2a;
+        height: 69px;
+        width: 1px;
+        position: absolute;
+        left: 0; }
+      .full_page .portfolio_section .view_more .box .right {
+        background-color: #2a2a2a;
+        height: 69px;
+        width: 1px;
+        position: absolute;
+        right: 0; }
+      .full_page .portfolio_section .view_more .box .bottom_left {
+        background-color: #2a2a2a;
+        width: 131px;
+        height: 1px;
+        position: absolute;
+        top: 69px;
+        left: 0; }
+      .full_page .portfolio_section .view_more .box .bottom_right {
+        background-color: #2a2a2a;
+        width: 131px;
+        height: 1px;
+        position: absolute;
+        top: 69px;
+        right: 0; }
+    .full_page .portfolio_section .view_more .first_line {
       background-color: #2a2a2a;
-      width: 151px;
+      width: 260px;
       height: 1px;
-      position: absolute; }
-      .full_page .why_us_section .head .lines .line.first {
-        left: 0;
-        top: 0; }
-      .full_page .why_us_section .head .lines .line.second {
-        right: 0;
-        bottom: 0; }
+      margin: 39px auto 9px; }
+    .full_page .portfolio_section .view_more .second_line {
+      background-color: #2a2a2a;
+      width: 165px;
+      height: 1px;
+      margin: 0 auto; }
+.full_page .clients_section {
+  height: 717px;
+  position: relative; }
+  .full_page .clients_section .quote_slider {
+    z-index: 5; }
+    .full_page .clients_section .quote_slider .slider_item {
+      height: 717px;
+      width: 100%; }
+      .full_page .clients_section .quote_slider .slider_item.first {
+        background: url("../images/first_q_bg.jpg") no-repeat center center;
+        background-size: cover; }
+      .full_page .clients_section .quote_slider .slider_item.second {
+        background: url(http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-101366.jpg) no-repeat center center;
+        background-size: cover; }
+      .full_page .clients_section .quote_slider .slider_item.third {
+        background: url("../images/first_q_bg.jpg") no-repeat center center;
+        background-size: cover; }
+      .full_page .clients_section .quote_slider .slider_item p {
+        color: rgba(255, 255, 255, 0.85098);
+        font-size: 17px;
+        font-weight: 500;
+        line-height: 26px;
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+        width: 881px;
+        margin: 0 auto;
+        text-transform: uppercase;
+        text-align: center;
+        padding-top: 280px; }
+      .full_page .clients_section .quote_slider .slider_item h2 {
+        font-family: Lato;
+        color: rgba(255, 255, 255, 0.65098);
+        font-size: 17px;
+        font-weight: 800;
+        line-height: 26px;
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        padding-top: 49px; }
+        .full_page .clients_section .quote_slider .slider_item h2 span {
+          font-weight: 400; }
+  .full_page .clients_section .quote_pager {
+    text-align: center;
+    width: 82px;
+    margin: 0 auto;
+    position: absolute;
+    z-index: 6;
+    bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    right: 0;
+    left: 0; }
+    .full_page .clients_section .quote_pager > div {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-right: 18px; }
+      .full_page .clients_section .quote_pager > div:last-of-type {
+        margin-right: 0; }
+      .full_page .clients_section .quote_pager > div a {
+        text-decoration: none;
+        text-indent: -9999px;
+        display: inline-block;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.2);
+        height: 100%; }
+        .full_page .clients_section .quote_pager > div a.active {
+          background-color: #cd3737; }
 
 /*# sourceMappingURL=style.css.map */
