--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,17 @@
 
+@-webkit-keyframes anim-shadow {
+	to {
+		box-shadow: 0px 0px 100px 50px;
+    	opacity: 0;
+	}
+}
+
+@keyframes anim-shadow {
+	to {
+		box-shadow: 0px 0px 100px 50px;
+    	opacity: 0;
+	}
+}
 
 .btn {
 	text-decoration: none;
@@ -33,6 +46,9 @@
 		line-height: 26px;
 		text-align: center;
 		font-family: 'Lato', sans-serif;
+		-webkit-transition: opacity 0.5s;
+		transition: opacity 0.5s;
+		opacity: 0;
 
 		span {
 			font-weight: 700;
@@ -47,18 +63,33 @@
 
 		.line {
 			background-color:  #2a2a2a;
-			width: 151px;
 			height: 1px;
 			position: absolute;
+			-webkit-transition: width 1s, left 1s;
+			transition: width 1s, left 1s;
 
 			&.first {
-				left: 0;
+				right: 64px;
 				top: 0;
+				width: 0px;
 			}	
 
 			&.second {
-				right: 0;
+				left: 64px;
 				bottom: 0;
+				width: 0px;
+			}
+		}
+	}
+
+	&.white {
+		h1 {
+			color: white;
+		}
+
+		.lines {
+			.line {
+				background-color: white;
 			}
 		}
 	}
@@ -156,7 +187,7 @@ header {
 		p {
 			font-family: 'Open Sans', sans-serif;
 
-			&.head {
+			&.head_text {
 				color: #999999;
 				font-size: 48px;
 				font-weight: 300;
@@ -186,6 +217,17 @@ header {
 			display: inline-block;
 			width: 50px;
 			height: 50px;
+			position: absolute;
+			z-index: 4;
+			background: url("../images/arrow.png") no-repeat 19px 19px;
+			bottom: 100px;
+			color: #c3c3c3;
+			border-radius: 50%;
+			border: 2px solid;
+			margin-left: auto;
+			margin-right: auto;
+			left: 0;
+			right: 0;
 		}
 	}
 
@@ -261,6 +303,16 @@ header {
 		.container {
 			width: 1139px;
 			margin: 60px auto 0;
+			position: relative;
+
+			.top_line {
+				background-color:  rgba(42, 42, 42, 0.5);
+				width: 879px;
+				height: 1px;
+				position: absolute;
+				top: 0;
+				margin-left: 129px;
+			}
 
 			.item {
 				display: inline-block;
@@ -347,7 +399,7 @@ header {
 	}
 
 	.portfolio_section {
-		padding: 100px 0px;
+		padding: 100px 0px 0px;
 
 		.portfolio {
 			margin-top: 130px;
@@ -477,44 +529,61 @@ header {
 				.top {
 					position: absolute;
 					top: 0;
-					width: 100%;
+					width: 0;
+					left: 50%;
 					background-color: #2a2a2a;
 					height: 1px;
+					-webkit-transition: width 0.7s, left 0.7s;
+					transition: width 0.7s, left 0.7s;
 				}
 
 				.left {
 					background-color: #2a2a2a;
-					height: 69px;
+					height: 0;
 					width: 1px;
 					position: absolute;
 					left: 0;
+					-webkit-transition: height 0.7s;
+					transition: height 0.7s;
 				}
 
 				.right {
 					background-color: #2a2a2a;
-					height: 69px;
+					height: 0;
 					width: 1px;
 					position: absolute;
 					right: 0;
+					-webkit-transition: height 0.7s;
+					transition: height 0.7s;
 				}
 
 				.bottom_left {
 					background-color: #2a2a2a;
-					width: 131px;
+					width: 0;
 					height: 1px;
 					position: absolute;
 					top: 69px;
 					left: 0;
+					-webkit-transition: width 0.7s;
+					transition: width 0.7s;
 				}
 
 				.bottom_right {
 					background-color: #2a2a2a;
-					width: 131px;
+					width: 0;
 					height: 1px;
 					position: absolute;
 					top: 69px;
 					right: 0;
+					-webkit-transition: width 0.7s;
+					transition: width 0.7s;
 				}
+			}
+
+			.btn {
+				opacity: 0;
+				-webkit-transition: opacity 0.7s;
+				transition: opacity 0.7s;
 			}
 
 			.first_line {
@@ -522,6 +591,9 @@ header {
 				width: 260px;
 				height: 1px;
 				margin: 39px auto 9px;
+				-webkit-transition: opacity 0.7s;
+				transition: opacity 0.7s;
+				opacity: 0;
 			}
 
 			.second_line {
@@ -529,6 +601,9 @@ header {
 				width: 165px;
 				height: 1px;
 				margin: 0 auto;
+				opacity: 0;
+				-webkit-transition: opacity 0.7s;
+				transition: opacity 0.7s;
 			}
 		}
 	}
@@ -536,6 +611,16 @@ header {
 	.clients_section {
 		height: 717px;
 		position: relative;
+
+		.absolute_head {
+			position: absolute;
+			z-index: 6;
+			top: 79px;
+			left: 0;
+			right: 0;
+			margin-right: auto;
+			margin-left: auto;
+		}
 
 		.quote_slider {
 			z-index: 5;
@@ -553,7 +638,7 @@ header {
 					background-size: cover;
 				}
 				&.third {
-					background: url('../images/first_q_bg.jpg') no-repeat center center;
+					background: url(http://i.ytimg.com/vi/oEKxQF5VTtA/maxresdefault.jpg) no-repeat center center;
 					background-size: cover;
 				}
 
@@ -623,6 +708,243 @@ header {
 					&.active {
 						background-color:  #cd3737;
 					}
+				}
+			}
+		}
+	}
+
+	.send_us_section {
+		margin-bottom: 79px;
+
+		.request {
+			width: 100%;
+			height: 114px;
+			background-color:  #cd3737;
+			text-align: center;
+			margin-bottom: 80px;
+
+			h1 {
+				font-family: 'Lato', sans-serif;
+				color:  #ffffff;
+				font-size: 24px;
+				font-weight: 400;
+				line-height: 114px;
+				text-transform: uppercase;
+
+				span {
+					font-weight: 700;
+				}
+			}
+		}
+
+		.form_wrapper {
+			width: 942px;
+			margin: 99px auto;
+
+			.btn {
+				float: right;
+			}
+
+			&:after {
+				  content:"";
+				  display:table;
+				  clear:both;
+			}
+
+			.input_wrapper {
+				position: relative;
+				z-index: 1;
+				display: inline-block;
+				max-width: 455px;
+				width: calc(100% - 2em);
+				vertical-align: top;
+
+				&:first-of-type {
+					margin-right: 28px;
+				}
+
+				label {
+					display: inline-block;
+					width: 100%;
+					color:  #2a2a2a;
+					font-size: 18px;
+					font-weight: 400;
+					line-height: 26px; 
+					-webkit-touch-callout: none;
+					-webkit-user-select: none;
+					-khtml-user-select: none;
+					-moz-user-select: none;
+					-ms-user-select: none;
+					user-select: none;
+					font-family: 'Lato', sans-serif;
+					position: relative;
+
+					span {
+						display: block;
+						margin-bottom: 19px;
+
+						i {
+							color: #cd3737;
+						}
+					}
+				}
+
+				input {
+					position: relative;
+					display: block;
+					padding: 17px;
+					font-size: 18px;
+					font-weight: bold;
+					font-family: 'Lato', sans-serif;
+					width: 100%;
+					box-shadow: 0px 0px 0px 2px #2a2a2a;
+					color: #2a2a2a;
+					-webkit-transition: box-shadow 0.3s, color 0.3s;
+					transition: box-shadow 0.3s, color 0.3s;
+					outline: none;
+					border: none;
+					box-sizing: border-box;
+
+					&:focus {
+						box-shadow: 0px 0px 0px 2px #cd3737;
+						color: #cd3737;
+					}
+				}
+
+				.shadow {
+					position: absolute;
+					width: 100%;
+					height: 56px;
+					bottom: 0;
+					box-shadow: 0px 0px 0px 0px;
+					color: rgba(205,55,55, 0.6);
+					z-index: -1;
+				}
+
+				input:focus + .shadow {
+					-webkit-animation: anim-shadow 0.3s forwards;
+					animation: anim-shadow 0.3s forwards;
+				}
+			}
+
+			.textarea_wrapper {
+				width: 100%;
+				margin-top: 49px;
+				position: relative;
+				margin-bottom: 50px;
+
+				label {
+					display: inline-block;
+					width: 100%;
+					color:  #2a2a2a;
+					font-size: 18px;
+					font-weight: 400;
+					line-height: 26px; 
+					-webkit-touch-callout: none;
+					-webkit-user-select: none;
+					-khtml-user-select: none;
+					-moz-user-select: none;
+					-ms-user-select: none;
+					user-select: none;
+					font-family: 'Lato', sans-serif;
+					position: relative;
+
+					span {
+						display: block;
+						margin-bottom: 19px;
+
+						i {
+							color: #cd3737;
+						}
+					}
+				}
+
+				textarea {
+					position: relative;
+					display: block;
+					padding: 17px;
+					font-size: 18px;
+					font-weight: bold;
+					font-family: 'Lato', sans-serif;
+					width: 100%;
+					box-shadow: 0px 0px 0px 2px #2a2a2a;
+					color: #2a2a2a;
+					-webkit-transition: box-shadow 0.3s, color 0.3s;
+					transition: box-shadow 0.3s, color 0.3s;
+					outline: none;
+					border: none;
+					box-sizing: border-box;
+					height: 277px;
+
+					&:focus {
+						box-shadow: 0px 0px 0px 2px #cd3737;
+						color: #cd3737;
+					}
+				}
+
+				.shadow {
+					position: absolute;
+					width: 100%;
+					height: 277px;
+					bottom: 0;
+					box-shadow: 0px 0px 0px 0px;
+					color: rgba(205,55,55, 0.6);
+					z-index: -1;
+				}
+
+				textarea:focus + .shadow {
+					-webkit-animation: anim-shadow 0.3s forwards;
+					animation: anim-shadow 0.3s forwards;
+				}
+			}
+		}
+	}
+
+	.footer {
+		.line {
+			background-color:  #2a2a2a;
+			width: 943px;
+			height: 1px;
+			margin: 0 auto;
+		}
+
+		h2 {
+			font-family: 'Lato';
+			color:  #2a2a2a;
+			font-size: 14px;
+			font-weight: 600;
+			line-height: 54px;
+			text-align: center;
+			margin: 30px auto 30px;
+
+			span {
+				color:  #cd3737;
+			}
+		}
+
+		.socials {
+			width: 150px;
+			margin: 0 auto 20px;
+
+			a {
+				text-decoration: none;
+				display: inline-block;
+				border-radius: 50%;
+				color:  #2a2a2a;
+				width: 30px;
+				height: 30px;
+				border: 2px solid;
+				text-align: center;
+				font-size: 16px;
+				line-height: 30px;
+				margin-right: 20px;
+
+				&:last-of-type {
+					margin-right: 0px;
+				}
+
+				&:hover {
+					color: #cd3737;
 				}
 			}
 		}
