--- a/css/style.scss
+++ b/css/style.scss
@@ -298,6 +298,7 @@ header {
 		background-size: cover;
 		position: relative;
 		padding: 80px 0;
+		overflow: hidden;
 
 
 		.container {
@@ -307,11 +308,14 @@ header {
 
 			.top_line {
 				background-color:  rgba(42, 42, 42, 0.5);
-				width: 879px;
+				width: 0;
 				height: 1px;
 				position: absolute;
 				top: 0;
 				margin-left: 129px;
+				left: 50%;
+				-webkit-transition: width 0.7s, left 0.7s;
+				transition: width 0.7s, left 0.7s;
 			}
 
 			.item {
@@ -332,6 +336,9 @@ header {
 					line-height: 26px;
 					font-family: 'Lato', sans-serif;
 					padding-bottom: 25px;
+					opacity: 0;
+					-webkit-transition: opacity 0.3s;
+					transition: opacity 0.3s;
 				}
 
 				p {
@@ -341,6 +348,9 @@ header {
 					line-height: 22px;
 					font-family: 'Lato', sans-serif;
 					padding-bottom: 30px;
+					opacity: 0;
+					-webkit-transition: opacity 0.3s;
+					transition: opacity 0.3s;
 				}
 
 				.item_lines {
@@ -353,27 +363,34 @@ header {
 						position: absolute;
 						top: 0;
 						width: 1px;
-						height: 31px;
+						height: 0px;
 						background-color:  rgba(42, 42, 42, 0.7);
 						margin-left: 36px;
+						-webkit-transition: height 0.7s;
+						transition: height 0.7s;
 					}
 
 					.horizontal_1 {
-						width: 45px;
+						width: 0;
 						height: 1px;
 						background-color:  rgba(42, 42, 42, 0.7);
 						position: absolute;
 						top: 31px;
-						top: 31px;
 						margin-left: 14px;
+						-webkit-transition: width 0.7s, left 0.7s;
+						transition: width 0.7s, left 0.7s;
+						left: 50%;
 					}
 
 					.horizontal_2 {
 						background-color:  rgba(42, 42, 42, 0.7);
-						width: 73px;
+						width: 0;
 						height: 1px;
 						position: absolute;
 						bottom: 0;
+						-webkit-transition: width 0.7s, left 0.7s;
+						transition: width 0.7s, left 0.7s;
+						left: 50%;
 					}
 				}
 
@@ -386,6 +403,11 @@ header {
 					text-align: center;
 					line-height: 155px;
 					margin: 0 auto 38px;
+					position: relative;
+					bottom: 30px;
+					opacity: 0;
+					-webkit-transition: opacity 0.8s, bottom 0.8s;
+					transition: opacity 0.8s, bottom 0.8s;
 
 					img {
 						width: 126px;
@@ -393,6 +415,14 @@ header {
 						border-radius: 50%;
 						vertical-align: middle;
 					}
+				}
+
+				.btn {
+					position: relative;
+					top: 90px;
+					opacity: 0;
+					-webkit-transition: opacity 0.4s, top 0.4s;
+					transition: opacity 0.4s, top 0.4s;
 				}
 			}
 		}
