--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,24 @@
 	}
 }
 
+@-webkit-keyframes pulse-grow {
+  to {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+
+@keyframes pulse-grow {
+  to {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+
+a {
+	outline: none;
+}
+
 .btn {
 	text-decoration: none;
 	color:  #ffffff;
@@ -95,7 +113,76 @@
 	}
 }
 
+.side_nav {
+	position: fixed;
+	top: 50%;
+	right: 0;
+	bottom: auto;
+	z-index: 10;
+	opacity: 0;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
 
+	ul {
+
+		li {
+			display: block;
+			width: 14px;
+			height: 15px;
+			margin: 12px;
+			position: relative;
+
+			a {
+				display: block;
+				position: relative;
+				z-index: 1;
+				width: 100%;
+				height: 100%;
+				cursor: pointer;
+				text-decoration: none;
+
+				span {
+					top: 2px;
+					left: 2px;
+					width: 6px;
+					height: 24px;
+					background: rgba(205,55,55,.2);
+					position: absolute;
+					z-index: 1;
+					box-sizing: border-box;
+					border: 0;
+
+					div {
+						position: absolute;
+						top: 6px;
+						color: rgba(205,55,55, .6);
+						font-size: 12px;
+						white-space: nowrap;
+						max-width: 220px;
+						overflow: hidden;
+						display: block;
+						width: auto;
+						right: 20px;
+						opacity: 0;
+						-webkit-transition: opacity 0.3s;
+						transition: opacity 0.3s;
+					}
+
+					&:hover {
+						div {
+							opacity: 1;
+						}
+					}
+				}
+				&.active {
+					span {
+						background: rgba(205,55,55,1);
+					}
+				}
+			}
+		}
+	}
+}
 
 header {
 	position: fixed;
@@ -228,6 +315,22 @@ header {
 			margin-right: auto;
 			left: 0;
 			right: 0;
+			-webkit-transform: translateZ(0);
+ 			 transform: translateZ(0);
+ 			 box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+ 			 &:hover, &:focus, &:active {
+ 			 	-webkit-animation-name: pulse-grow;
+				  animation-name: pulse-grow;
+				  -webkit-animation-duration: 0.4s;
+				  animation-duration: 0.4s;
+				  -webkit-animation-timing-function: linear;
+				  animation-timing-function: linear;
+				  -webkit-animation-iteration-count: infinite;
+				  animation-iteration-count: infinite;
+				  -webkit-animation-direction: alternate;
+				  animation-direction: alternate;
+ 			 }
 		}
 	}
 
@@ -287,6 +390,152 @@ header {
 						background: url('../images/success.png');
 					}
 				}
+			}
+		}
+
+		.lists_container {
+			position: relative;
+			width: 1100px;
+			height: 402px;
+			margin: 0 auto;
+
+			.top_line {
+				position: absolute;
+				height: 1px;
+				width: 0;
+				left: 455px;
+				background-color: #2a2a2a;
+				-webkit-transition: all 0.7s;
+				transition: all 0.7s;
+			}
+
+			.bottom_line {
+				position: absolute;
+				height: 1px;
+				width: 0;
+				background-color: #2a2a2a;
+				left: 455px;
+				top: 124px;
+				-webkit-transition: all 0.7s;
+				transition: all 0.7s;
+			}
+
+			.bottom_vertical {
+				height: 0;
+				width: 1px;
+				position: absolute;
+				background-color: #2a2a2a;
+				top: 125px;
+				left: 552px;
+				-webkit-transition: height 0.7s;
+				transition: height 0.7s;
+			}
+
+			.separator_1 {
+				position: absolute;
+				width: 1px;
+				height: 0;
+				left: 0;
+				background-color: #2a2a2a;
+				-webkit-transition: all 0.7s;
+				transition: all 0.7s;
+			}
+
+			.separator_2 {
+				position: absolute;
+				width: 1px;
+				height: 0;
+				left: 455px;
+				background-color: #2a2a2a;
+				top: 62px;
+				-webkit-transition: all 0.7s;
+				transition: all 0.7s;
+			}
+
+			.separator_3 {
+				position: absolute;
+				width: 1px;
+				height: 0;
+				background-color: #2a2a2a;
+				right: 196px;
+				top: 124px;
+				-webkit-transition: all 0.7s;
+				transition: all 0.7s;
+			}
+
+			ul {
+				position: absolute;
+
+				li {
+					font-family: 'Lato';
+					color:  #2a2a2a;
+					font-size: 16px;
+					font-weight: 400;
+					line-height: 26px;
+					text-transform: uppercase;
+					position: relative;
+					margin-bottom: 16px;
+
+					span {
+						font-weight: 700;
+					}
+
+					i.line {
+						width: 0;
+						height: 1px;
+						display: inline-block;
+						background-color: #2a2a2a;
+						bottom: 5px;
+						position: relative;
+						margin-right: 9px;
+					}
+
+					i.text {
+						opacity: 0;
+						-webkit-transition: all 0.4s;
+						transition: all 0.4s;
+					}
+				}
+
+				&.list_1 {
+					left: 0;
+					top: 27px;
+				}
+
+				&.list_2 {
+					left: 455px;
+					top: -13px;
+
+					li {
+						left: 30px;
+						opacity: 0;
+
+						i.line {
+							width: 33px;
+						}
+
+						i.text {
+							opacity: 1;
+						}
+					}
+				}
+
+				&.list_3 {
+					left: 904px;
+					top: 27px;
+				}
+			}
+
+			.btn {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				margin-left: auto;
+				margin-right: auto;
+				opacity: 0;
+				-webkit-transition: opacity 0.6s;
+				transition: opacity 0.6s;
 			}
 		}
 	}
@@ -529,18 +778,31 @@ header {
 					.photo {
 						display: inline-block;
 						width: 33.33333%;
-						height: 571px;
+						height: 600px;
 						overflow: hidden;
 
 						.small {
 							width: 100%;
-							height: 292px;
+							height: 300px;
 							overflow: hidden;
 						}
 
 						img {
 							width: 100%;
 							height: auto;
+							filter: grayscale(1);
+							-webkit-filter: grayscale(1);
+							filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+							-webkit-transition: all 0.8s;
+							transition: all 0.8s;
+							transition: all 0.8s;
+							cursor: pointer;
+
+							&:hover {
+								filter: grayscale(0);
+								-webkit-filter: grayscale(0);
+								filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+							}
 						}
 					}
 				}
@@ -668,7 +930,7 @@ header {
 					background-size: cover;
 				}
 				&.third {
-					background: url(http://i.ytimg.com/vi/oEKxQF5VTtA/maxresdefault.jpg) no-repeat center center;
+					background: url(http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-77085.jpg) no-repeat center top;
 					background-size: cover;
 				}
 
